--- a/index.html
+++ b/index.html
@@ -1,160 +1,100 @@
-<!-- [Full working code with minimal edits to support cart below] -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <style>
-    body {
-      background-color: #f8f9fa;
-      font-family: Arial, sans-serif;
+    body { font-family: Arial, sans-serif; background: #f7f7f7; padding: 20px; }
+    form { background: white; padding: 20px; border-radius: 10px; max-width: 500px; margin: auto; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    input, select, textarea, button {
+      display: block; width: 100%; padding: 10px; margin-bottom: 15px;
+      border: 1px solid #ccc; border-radius: 5px; font-size: 16px;
     }
-
-    .booking-form {
-      max-width: 500px;
-      margin: 50px auto;
-      background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
-
-    .form-control {
-      background-color: #e9f0ff;
-    }
-
-    .btn-primary {
-      background-color: #006aff;
-      border: none;
-    }
-
-    .btn-primary:hover {
-      background-color: #0051c9;
-    }
-
-    .logo {
-      max-height: 80px;
-      margin-bottom: 20px;
-      border-radius: 12px;
-    }
-
-    .unit-dropdown {
-      position: relative;
-      text-align: left;
-      margin-bottom: 1rem;
-    }
-
-    .unit-option {
-      display: flex;
-      align-items: center;
-      padding: 10px;
-      cursor: pointer;
-    }
-
-    .unit-option input {
-      margin-right: 10px;
-    }
-
-    .unit-option img {
-      height: 40px;
-      width: 40px;
-      border-radius: 8px;
-      margin-right: 10px;
-    }
-
-    .unit-list {
-      position: absolute;
-      width: 100%;
-      background: white;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      max-height: 200px;
-      overflow-y: auto;
-      z-index: 10;
-      display: none;
-    }
-
-    .unit-dropdown.open .unit-list {
-      display: block;
-    }
-
+    #unitDropdown { position: relative; }
     #unitDisplay {
-      background-color: #e9f0ff;
-      padding: 10px;
-      border-radius: 8px;
-      cursor: pointer;
+      background: #eee; padding: 10px; cursor: pointer;
+      border-radius: 5px; text-align: left;
     }
-
-    .cart-list {
-      background-color: #e9f0ff;
-      border-radius: 8px;
-      padding: 10px;
-      margin-bottom: 1rem;
+    #unitList {
+      display: none;
+      position: absolute; top: 100%; left: 0; right: 0;
+      background: white; border: 1px solid #ccc;
+      z-index: 1000; max-height: 200px; overflow-y: auto;
     }
+    #unitDropdown.open #unitList { display: block; }
+    .unit-option {
+      padding: 10px; display: flex; align-items: center;
+      border-bottom: 1px solid #eee; cursor: pointer;
+    }
+    .unit-option:hover { background: #f0f0f0; }
+    .unit-option img {
+      width: 50px; height: 50px; object-fit: cover;
+      margin-right: 10px; border-radius: 5px;
+    }
+    #successMessage, #errorMessage {
+      display: none; padding: 10px; border-radius: 5px;
+      margin-top: 10px;
+    }
+    #successMessage { background: #d4edda; color: #155724; }
+    #errorMessage { background: #f8d7da; color: #721c24; }
   </style>
 </head>
 <body>
-  <div class="booking-form text-center">
-    <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
-    <h2 class="mb-3">Slide Guys Booking</h2>
-    <p>Select one or more units and the date you would like to reserve.<br> No cancellations.<br>Rescheduling is subject to availability.<br>A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation.</p>
-    
-    <form id="bookingForm">
-      <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
-      <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
-      <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
-      <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
+  <form id="bookingForm">
+    <h2>Book Your Slide</h2>
+    <input type="text" id="name" placeholder="Your Name" required />
+    <input type="tel" id="phone" placeholder="Phone Number" required />
+    <input type="email" id="email" placeholder="Email Address" required />
+    <input type="text" id="address" placeholder="Installation Address" required />
+    <input type="date" id="date" required />
 
-      <div class="unit-dropdown" id="unitDropdown">
-        <div id="unitDisplay">Select units</div>
-        <div class="unit-list" id="unitList"></div>
-      </div>
-
-      <!-- Cart display -->
-      <div class="cart-list text-start" id="cartContainer" style="display:none;">
-        <strong>Selected Units:</strong>
-        <ul id="cartList" class="mb-0"></ul>
-      </div>
-
-      <input type="date" id="date" class="form-control mb-3" required />
-      <button type="submit" class="btn btn-primary w-100">Reserve</button>
-    </form>
-
-    <div id="successMessage" class="mt-3 text-success" style="display:none;">
-      Booking successful!
+    <div id="unitDropdown">
+      <div id="unitDisplay">Select a unit</div>
+      <div id="unitList"></div>
     </div>
-    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
-      One or more selected units are already booked on this date.
-    </div>
-  </div>
 
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-  <!-- EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-  <script>
-    (function () {
-      emailjs.init("PXm_wNk9aIao8Hlpp");
-    })();
-  </script>
+    <button type="submit">Submit Booking</button>
+    <div id="successMessage">Booking submitted successfully!</div>
+    <div id="errorMessage"></div>
+  </form>
 
   <script>
+    emailjs.init("user_pvRZxYOZJTk0ZuGO7EO9n");
+
     document.addEventListener('DOMContentLoaded', async () => {
-      const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
-      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M
-';
-      const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+      const today = new Date();
+      const currentYear = today.getFullYear();
+      const allowedStart = new Date(`${currentYear}-01-01`);
+      const allowedEnd = new Date(`${currentYear}-12-31`);
+      const dateInput = document.getElementById('date');
+      const cart = [];
 
-      const cart = new Map();
-      const cartList = document.getElementById('cartList');
-      const cartContainer = document.getElementById('cartContainer');
+      const minDate = today > allowedStart ? today : allowedStart;
+      dateInput.setAttribute('min', minDate.toISOString().split('T')[0]);
+      dateInput.setAttribute('max', allowedEnd.toISOString().split('T')[0]);
+
+      dateInput.addEventListener('change', () => {
+        const selected = new Date(dateInput.value);
+        if (selected.getFullYear() !== currentYear) {
+          alert("You may only book dates within this year. Bookings for next year open January 1st.");
+          dateInput.value = '';
+        }
+      });
+
+      const supabase = window.supabase.createClient(
+        'https://vaobmohukgcqfvnclqyh.supabase.co',
+        'your-anon-key-here' // Replace this with your actual anon key
+      );
 
       async function loadUnits() {
         const { data, error } = await supabase.from('units').select('id, name, thumbnail_url');
-        if (error) return;
+        if (error) {
+          console.error('Error loading units:', error);
+          return;
+        }
 
         const unitList = document.getElementById('unitList');
         const unitDisplay = document.getElementById('unitDisplay');
@@ -163,25 +103,16 @@
           const div = document.createElement('div');
           div.className = 'unit-option';
           div.innerHTML = `
-            <input type="checkbox" data-id="${unit.id}" data-name="${unit.name}" />
-            <img src="${unit.thumbnail_url}" />
+            <img src="${unit.thumbnail_url}" alt="${unit.name}" />
             <span>${unit.name}</span>
           `;
-
-          div.querySelector('input').addEventListener('change', (e) => {
-            const checkbox = e.target;
-            const id = checkbox.dataset.id;
-            const name = checkbox.dataset.name;
-
-            if (checkbox.checked) {
-              cart.set(id, name);
-            } else {
-              cart.delete(id);
+          div.addEventListener('click', () => {
+            if (!cart.find(u => u.id === unit.id)) {
+              cart.push(unit);
+              updateCartDisplay();
             }
-
-            updateCartUI();
+            document.getElementById('unitDropdown').classList.remove('open');
           });
-
           unitList.appendChild(div);
         });
 
@@ -196,90 +127,74 @@
         });
       }
 
-      function updateCartUI() {
-        cartList.innerHTML = '';
-        cart.forEach((name) => {
-          const li = document.createElement('li');
-          li.textContent = name;
-          cartList.appendChild(li);
-        });
-        cartContainer.style.display = cart.size > 0 ? 'block' : 'none';
+      function updateCartDisplay() {
+        const unitDisplay = document.getElementById('unitDisplay');
+        if (cart.length === 0) {
+          unitDisplay.textContent = 'Select a unit';
+        } else {
+          unitDisplay.innerHTML = cart.map(u => `✅ ${u.name}`).join('<br>');
+        }
       }
 
       await loadUnits();
 
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
+
+        if (cart.length === 0) {
+          alert('Please select at least one unit.');
+          return;
+        }
+
         const name = document.getElementById('name').value.trim();
         const phone = document.getElementById('phone').value.trim();
         const email = document.getElementById('email').value.trim();
         const address = document.getElementById('address').value.trim();
         const date = document.getElementById('date').value;
 
-        if (cart.size === 0) {
-          alert("Please select at least one unit.");
-          return;
-        }
-
-        const bookings = [];
-        let conflictFound = false;
-
-        for (const [unitId, unitName] of cart) {
-          const { data: existing } = await supabase
+        const failedUnits = [];
+        for (let unit of cart) {
+          const { data: existing, error: checkError } = await supabase
             .from('bookings')
             .select('*')
-            .eq('unit', unitId)
+            .eq('unit', unit.id)
             .eq('date', date);
 
-          if (existing && existing.length > 0) {
-            conflictFound = true;
-            break;
-          } else {
-            bookings.push({ name, phone, email, address, unit: unitId, date });
+          if ((existing && existing.length > 0) || checkError) {
+            failedUnits.push(unit.name);
           }
         }
 
-        if (conflictFound) {
+        if (failedUnits.length > 0) {
+          document.getElementById('errorMessage').textContent =
+            `The following units are already booked on this date: ${failedUnits.join(', ')}`;
           document.getElementById('errorMessage').style.display = 'block';
           document.getElementById('successMessage').style.display = 'none';
           return;
         }
 
-        const { error } = await supabase.from('bookings').insert(bookings);
-        if (error) {
-          alert("An error occurred. Please try again.");
+        const inserts = cart.map(unit => ({
+          name, phone, email, address, unit: unit.id, date
+        }));
+
+        const { error: insertError } = await supabase.from('bookings').insert(inserts);
+
+        if (insertError) {
+          alert('An error occurred while booking. Please try again.');
           return;
         }
 
-        // Send emails per unit
-        cart.forEach((unitName) => {
-          const params = { name, phone, email, address, unit: unitName, date };
-          emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
-          emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
-        });
+        const unitNames = cart.map(u => u.name).join(', ');
+        const params = { name, phone, email, address, unit: unitNames, date };
+
+        emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
+        emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
 
         document.getElementById('successMessage').style.display = 'block';
         document.getElementById('errorMessage').style.display = 'none';
         document.getElementById('bookingForm').reset();
-        cart.clear();
-        updateCartUI();
-      });
-
-      // Date validation remains the same
-      const today = new Date();
-      const currentYear = today.getFullYear();
-      const allowedStart = new Date(`${currentYear}-01-01`);
-      const allowedEnd = new Date(`${currentYear}-12-31`);
-      const dateInput = document.getElementById('date');
-      dateInput.setAttribute('min', today.toISOString().split('T')[0]);
-      dateInput.setAttribute('max', allowedEnd.toISOString().split('T')[0]);
-
-      dateInput.addEventListener('change', () => {
-        const selected = new Date(dateInput.value);
-        if (selected.getFullYear() !== currentYear) {
-          alert("You may only book dates within this year.");
-          dateInput.value = '';
-        }
+        cart.length = 0;
+        updateCartDisplay();
       });
     });
   </script>
