--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
       const supabase = window.supabase.createClient(
         'https://vaobmohukgcqfvnclqyh.supabase.co',
-        'your-anon-key-here' // Replace this with your actual anon key
+        'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M
+'
       );
 
       async function loadUnits() {
